kompose_production_ver1/react-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -v -f docker-compose-production.config.yml -o kompose_production
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: react
  name: react
  namespace: ingress-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: react
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -v -f docker-compose-production.config.yml -o
          kompose_production
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.service: react
    spec:
      terminationGracePeriodSeconds: 30
      containers:
      - env:
        - name: AWS_ACCESS_KEY_ID
          value: AKIAXV2OR6BHPKAHQK3D
        - name: AWS_SECRET_ACCESS_KEY
          value: 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
        - name: DATABASE_URL
          value: postgres://production_geneesplaats_nl_user:1qiovWPEcmbJ@postgres:5432/production_geneesplaats_nl
        - name: DEBUG
          value: "1"
        - name: DOCKERID
          value: spikkie
        - name: ENVIRONMENT
          value: production
        - name: JWT_SECRET
          value: awv4BcIzsRysXkhoSAb8t8lNENgXSqBruVlLwd45kGdYjeJHLap9LUJ1t9DTdw36DvLcWs3qEkPyCY6vOyNljlh2Er952h2gDzYwG82rs1qfTzdVIg89KTaQ4SWI1YGY
        - name: NODE_ENV
          value: development
        - name: PORT
          value: "8000"
        - name: POSTGRES_DB
          value: production_geneesplaats_nl
        - name: POSTGRES_GENEESPLAATS_NL_IMAGE
          value: postgres:12.1-alpine
        - name: POSTGRES_GENEESPLAATS_NL_VERSION
          value: latest
        - name: POSTGRES_PASSWORD
          value: 1qiovWPEcmbJ
        - name: POSTGRES_REPOSITORY
          value: postgres_geneesplaats_nl_production
        - name: POSTGRES_USER
          value: production_geneesplaats_nl_user
        - name: REACT_APP_BASE_URL
        - name: REACT_APP_EXPOSE_PORT
          value: "8000"
        - name: REACT_APP_TEST
          value: TEST
        - name: REACT_GENEESPLAATS_NL_IMAGE
          value: spikkie/react_geneesplaats_nl_production
        - name: REACT_GENEESPLAATS_NL_VERSION
          value: V0.1.14
        - name: REACT_REPOSITORY
          value: react_geneesplaats_nl_production
        - name: SECRET_KEY
          value: nngC9ZO6LCOHqjXo3sqhP4gWHiTLHyCZXaK3iwRq2U7s7gq9pV
        image: spikkie/react_geneesplaats_nl_production:V0.1.14
        imagePullPolicy: "Always"
        name: react-geneesplaats-nl-production
        ports:
        - containerPort: 8000
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
      imagePullSecrets:
        - name: regcred-nginx-ingress

status: {}
